@@ -36,5 +36,19 @@ localeDefault = en-us
 languageDefault = en-us
 ; Short-to-long locale/language code.
 codeShortToLong[en] = en-us
-codeShortToLong[es] = es-es
 codeShortToLong[da] = da-dk
+; Locales supported and their implementing classes.
+localeToClass[en-us] = "\\SimpleComplex\\Locale\\LocaleEnUs"
+localeToClass[en-gb] = "\\SimpleComplex\\Locale\\LocaleEnGb"
+localeToClass[da-dk] = "\\SimpleComplex\\Locale\\LocaleDaDk"
+; Languages supported.
+languages[] = en-us
+languages[] = da-dk
+; Map language from locale.
+localeToLanguage[en-us] = en-us
+localeToLanguage[en-gb] = en-us
+localeToLanguage[da-dk] = da-dk
+; Map locale from language.
+languageToLocale[en-us] = en-us
+languageToLocale[en-gb] = en-gb
+languageToLocale[da-dk] = da-dk
